--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<br>
 		<h2><b>&emsp;Absolute Best Liver and Onions:</b></h2>	
 
-		&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="image.jpeg" alt="liver and Onions dish" width="550" height="500">
+		&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="Image.jpg" alt="liver and Onions dish" width="550" height="500">
 
 		<h2><a href="https://youtu.be/4yCL5lJCepU"target="_blank">visit Absolute Best Liver and Onions video</a></h2>
 
