--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<br>
 	<div class="h2">
 		<h2><b>Absolute Best Liver and Onions</b></h2>	
-		<img src="image.jpeg" alt="liver and Onions dish" width="500" height="400">
+		<img src="image.jpg" alt="liver and Onions dish" width="500" height="400">
 	</div>
 	<h2><a href="https://youtu.be/4yCL5lJCepU"target="_blank" class="link">YouTube link-https://youtu.be/4yCL5lJCepU</a></h2>
 		<br>
