--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 	<div class="h2">
 		<h2><b>Absolute Best Liver and Onions</b></h2>	
 	</div>
+	<div class="frame">
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/4yCL5lJCepU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<h2><a href="https://youtu.be/4yCL5lJCepU"target="_blank" class="link">YouTube link-https://youtu.be/4yCL5lJCepU</a></h2>
+	</div>
+		<h2><a href="https://youtu.be/4yCL5lJCepU"target="_blank" class="link">YouTube link-https://youtu.be/4yCL5lJCepU</a></h2>
 		<br>
 			<h2 class="ingredient">Ingredients:</h2>
 			<div class="ul">
