--- a/index.html
+++ b/index.html
@@ -7,49 +7,50 @@
 	<title>Recipe</title>
 </head>
 <body>
-	<div class="h1">
-		<h1>Simple and easy Recipe</h1>
-	</div>
-	<br>
-	<div class="h2">
-		<h2><b>Absolute Best Liver and Onions</b></h2>	
-	</div>
-	<div class="frame">
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/4yCL5lJCepU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</div>
+	<div class="backgroundcolor">
+		<div class="h1">
+			<h1>Simple and Easy Recipe</h1>
+		</div>
+		<br>
+		<div class="h2">
+			<h2><b>Absolute Best Liver and Onions</b></h2>	
+		</div>
+		<div class="frame">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/4yCL5lJCepU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
 		<h2><a href="https://youtu.be/4yCL5lJCepU"target="_blank" class="link">YouTube link-https://youtu.be/4yCL5lJCepU</a></h2>
 		<br>
 			<h2 class="ingredient">Ingredients:</h2>
 			<div class="ul">
-			<h3><ul>
-				<li>2 pounds sliced beef liver</li>
-				<li>½ cups milk, or as needed</li>
-				<li>¼ cup butter, divided</li>
-				<li>	2 large Vidalia onions, sliced into rings</li>
-				<li>2 cups all-purpose flour, or as needed</li>
-				<li>	salt and pepper to taste</li>
-			</ul>
-		</h3>
-	</div>
-		<h2 class="step">STEPS:</h2>
-		<div class="ol">
-		<ol>
-			<li><b>Step1:</b></li>
-			<p><b>Gently rinse liver slices under cold water, and place in a medium bowl. Pour in enough milk to cover. Let stand while preparing onions. (I like to soak up to an hour or two - whatever you have time for.) This step is SO important in taking the bitter taste of the liver out.</b><p>
-			<li><b>Step2:</b></li>
-				<p><b>Melt 2 tablespoons of butter in a large skillet over medium heat. Separate onion rings, and saute them in butter until soft. Remove onions, and melt remaining butter in the skillet. Season the flour with salt and pepper, and put it in a shallow dish or on a plate. Drain milk from liver, and coat slices in the flour mixture.</b></p>
-			<li><b>Step3:</b></li>
-				<p><b>
-					When the butter has melted, turn the heat up to medium-high, and place the coated liver slices in the pan. Cook until nice and brown on the bottom. Turn, and cook on the other side until browned. Add onions, and reduce heat to medium. Cook a bit longer to taste. Our family prefers the liver to just barely retain a pinkness on the inside when you cut to check. Enjoy!
-				</b></p>
-				<br>
-		</ol>
-	</div>
-			<div class="n">
-				<h2>Nutrition Facts:</h2>
-					<P><b>Per Serving: 687 calories; protein 48.9g; carbohydrates 74.2g; fat 20.7g; cholesterol 577.9mg; sodium 308.7mg.</b></P>
+				<h3><ul>
+					<li>2 pounds sliced beef liver</li>
+					<li>½ cups milk, or as needed</li>
+					<li>¼ cup butter, divided</li>
+					<li>2 large Vidalia onions, sliced into rings</li>
+					<li>2 cups all-purpose flour, or as needed</li>
+					<li>salt and pepper to taste</li>
+					</ul>
+				</h3>
 			</div>
-
+			<h2 class="step">STEPS:</h2>
+		<div class="ol">
+			<ol>
+				<li><b>Step1:</b></li>
+				<p><b>Gently rinse liver slices under cold water, and place in a medium bowl. Pour in enough milk to cover. Let stand while preparing onions. (I like to soak up to an hour or two - whatever you have time for.) This step is SO important in taking the bitter taste of the liver out.</b><p>
+				<li><b>Step2:</b></li>
+					<p><b>Melt 2 tablespoons of butter in a large skillet over medium heat. Separate onion rings, and saute them in butter until soft. Remove onions, and melt remaining butter in the skillet. Season the flour with salt and pepper, and put it in a shallow dish or on a plate. Drain milk from liver, and coat slices in the flour mixture.</b></p>
+				<li><b>Step3:</b></li>
+					<p><b>
+					When the butter has melted, turn the heat up to medium-high, and place the coated liver slices in the pan. Cook until nice and brown on the bottom. Turn, and cook on the other side until browned. Add onions, and reduce heat to medium. Cook a bit longer to taste. Our family prefers the liver to just barely retain a pinkness on the inside when you cut to check. Enjoy!
+					</b></p>
+		<br>
+			</ol>
+		</div>
+		<div class="n">
+			<h2>Nutrition Facts:</h2>
+				<P><b>Per Serving: 687 calories; protein 48.9g; carbohydrates 74.2g; fat 20.7g; cholesterol 577.9mg; sodium 308.7mg.</b></P>
+		</div>
+	</div>
 
 </body>
 </html>
